--- a/Grav/app/views/main/main-scene.html
+++ b/Grav/app/views/main/main-scene.html
@@ -1,2 +1,5 @@
-<canvas id='canvas400' width='320' height='400' class='cssCanvas'></canvas>
-<canvas id='canvas480' width='320' height='480' class='cssCanvas'></canvas>
+<div id="grav_main">
+    <canvas id='canvas400' width='320' height='400' class='cssCanvas'></canvas>
+    <canvas id='canvas480' width='320' height='480' class='cssCanvas'></canvas>
+    <div id='options_btn' x-mojo-tap-highlight="immediate"></div>
+</div>
