enhanced system selection from options tap, added play/pause simulation button, improved how bodies are added

--- a/Grav/app/views/main/main-scene.html
+++ b/Grav/app/views/main/main-scene.html
@@ -2,4 +2,5 @@
     <canvas id='canvas400' width='320' height='400' class='cssCanvas'></canvas>
     <canvas id='canvas480' width='320' height='480' class='cssCanvas'></canvas>
     <div id='options_btn' x-mojo-tap-highlight="immediate"></div>
+    <div id='play_btn' class='pause' x-mojo-tap-highlight="immediate"></div>
 </div>
